Fix z-index on header

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -9,6 +9,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1000;
 }
 
 #header_container{
